Added comment to index file with name and student #

--- a/index.html
+++ b/index.html
@@ -1,5 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
+<!--  
+Derek Marshall - 170223090
+Taite LaGrange - 170911780
+---------------------------------
+Since Three.js can't load textures locally
+you must use a live server to test this code.
+This can be easily done using VSCode with the Live Server
+extension. Download extension, right click on index.html
+and press launch with live server.
+-->
 
 <head>
     <meta charset="UTF-8">
